# fiap-tech-challenge-fase3

./: .gitignore  README.md  config.py  pyproject.toml  setup.py
dashboard/: app.py
models/: student_stress_rf_model.joblib
notebooks/: 01-analise-exploratoria.ipynb  projeto_estresse_estudantes.ipynb
